171		C++			Daimyos get merged into Japan.
172		C++			Governments convert.
173					?
174		N/A			Technical description of the description.
175		C++			Added the miscmod files.
176		N/A			Updated the SRS document.
177		C++			Timestamp log messages
178		C++			Map Mossurize for HTTT as we do for DW
179		C++			Don't crash on countries that have no history leaf
180		C++			Minor changes to iterator and stream use for vc9
181		C++			Fix parser handling of # in string literals
182		C++			Refactor date handling
183		C++			Convert international relations and military access
184		C++			Convert diplomatic agreements
185		C++			A little refactoring
186		C++			Update project files and changelog
187		C++			Altered DW province mappings so the owner of Antwerpen gets a coastal province
188		C++			Cleaned up diplomatic error messages
189		C++			Update more province mappings for coastal provinces
190		C++			Convert armies and navies
191		C++			Fix Benelux mappings for HTTT. Error instead of crashing on bad mappings. Include port lists in build.
192		C++			Read regiment costs from a file instead of hardcoding them
193		C++			Complete port whitelist and blacklist.
194		C++			Speed up state conversion (O(n^2)->O(n))
195		C++			Speed up country mapping
196		C++			Added another DW save game
197		C++			Correct DW Switzerland province mappings
198		C++			steppe_horde added to government map.
199		C++			Always give democracies some form of voting rights.
200		C++			Grow soldier pops to support the regiments assigned to them
201		C++			Give pooled regiments to the armies/navies that were most shortchanged
202		C++			If a regiment's home province doesn't belong to the regiment owner, don't try to use its pops.
					If a regiment's home was originally a colony that can't support it, make it into an expeditionary unit.
					Detect and handle several additional errors in army placement.

203		C++			EU3 provinces 1129 and 1130 correctly mapped.
204		C++			Moved some functions to new files.